# Forest-Thinning

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CheckPrediction.py  LICENSE  README.md  abc.py  list of terms.md  main.py  pyproject.toml  requirements.txt  scheme.md  sonar-project.properties
.github/workflows/: main_deploy.yml
app/: Paths.py  main.py  main_screen.py  visualization_approximation_single_variable.py  visualization_approximation_two_variable.py  write_data.py
app/Model/: Graph.py  Line.py  Simulation.py  __init__.py
app/Model/PredictiveModel/: CheckPrediction.py  ForestGrowthSimulator.py  Graph.py  GraphData.py  GraphSerializer.py  Graph_pre_delete.py  Line.py  LineManager.py  ThinningSimulator.py
app/Model/ReferenceData/: Areas.py  Breeds.py  Conditions.py  Graphics.py  ReferenceDataManager.py  ReferenceEntity.py
app/Reader/: Reader.py  __init__.py
app/Services/: AreasService.py  BreedsService.py  ConditionsService.py  GraphicsService.py  PredictModelServices.py  ReferenceDataManagerService.py
app/View/: AddForest.py  CreateForm.py  ElementForm.py  ListGraphicsWindow.py  MainWindow.py  UpdateForm.py  add_forest.py  create_form.py  list_graphics_window.py  main_screen.py
app/background_information/: General_functions.py  Paths.py  Reference_data.py  SettingView.py  Settings.py  TypeAction.py  TypeLine.py  Type_line.py  Type_settings.py
app/math_model/: __init__.py  approximation_two_variable_predict.py  check_read.py  check_write_and_read.py  poly_features.pkl  poly_reg.pkl  search_degree_approximation.py  visualization_approximation_all_line.py  visualization_approximation_single_variable.py  visualization_approximation_two_variable.py  write_data.py
data/data_line/: Region1_Breed1_Condition2.tar  nortTaiga_pine_lingonberry.tar  taiga_pine_sorrel.tar
data_line/: nortTaiga_pine_lingonberry.tar  pine_sorrel.tar  scheme.md
data_line/pine_sorrel/: info.json  pine_sorrel.tar  wpd.json
tests/: test_1.py
